<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Pocket Pickup</string>
    <string name="create_game">Create Game</string>
    <string name="find_game">Find Game</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">Pocket Pickup</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- facebook login strings -->
    <string name="app_id">1475481862686496</string>
    <string name="login">Log In</string>
    <string name="login_intro">Log in using Facebook. We will never post to Facebook or use your info without permission.</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Joined Games</item>
        <item>Created Games</item>
        <item>Preferred Sports</item>
        <!--<item>Settings</item>-->
        <item>Help</item>
        <item>Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_joined</item>
        <item>@drawable/ic_created</item>
        <item>@drawable/ic_sports</item>
        <!--<item>@drawable/ic_settings</item>-->
        <item>@drawable/ic_help</item>
        <item>@drawable/ic_logout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_create_game">Create Game</string>
    <string name="title_activity_find_game">Find Game</string>

    <!-- Find Game Activity Strings -->
    <string name="select_location">Location:</string>
    <string name="select_radius">Radius:</string>
    <string name="select_radius_miles">Mile(s)</string>
    <string name="select_end_date">Any End Date</string>
    <string name="select_range_from">Starting After:</string>
    <string name="select_range_to">Ending Before:</string>
    <string name="change_pref">Change Sport Preferences</string>
    <string name="all_sports">All Sports</string>
    <string name="selected_sports">Selected Sports</string>
    <string name="preferred_sports">Preferred Sports</string>
    <string name="select_sports">Sports:</string>
    <string name="reset">Reset All</string>
    <string name="between_times">Starting Between These Times:</string>
    <string name="between_dates">And Between These Dates:</string>
    <string name="clear_results">Clear Map</string>
    
    <string-array name="radius_choices">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
    </string-array>
    <string-array name="duration_choices">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="min_num_players_choices">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <!-- Create Game Activity Strings -->
    <string name="create_select_time">Select Time</string>
    <string name="create_select_date">Select Date</string>
    <string name="cg_on">When:</string>
    <string name="cg_sport">Sport:</string>
    <string name="cg_duration">Duration:</string>
    <string name="cg_min_players">Minimum Number of Players:</string>
    <string name="cg_duration_hours">Hour(s)</string>
    <string name="cg_details_hint">Any additional info?</string>
    <string name="cg_details">Details:</string>

    <string-array name="sport_choices">
        <item>Basketball</item>
        <item>Add more here!</item>
    </string-array>

    <string name="title_activity_game">Game Details</string>
    <string name="action_settings">Settings</string>
    
    <!-- Game Activity Strings -->
    <string name="join_game">Join Game</string>
    <string name="leave_game">Leave Game</string>
    <string name="delete_game">Delete Game</string>
    <string name="g_attendees">Planned Attendees:</string>
    
    <!-- Help Strings -->
    <string name="instructions_header">Instructions For Use</string>
    <string name="instructions_create">To create a game, navigate until the pin is on the desired
        location, press the \'Create Game\' button, fill in the details, and finish by pressing 
        \'Create Game\'.</string>
    <string name="instructions_find">To find games, press the \'Find Game\' button, fill in the details
        and press \'Find Game\'. Games fitting the desired parameters will be displayed on the map.</string>
    <string name="instructions_join">To join a game, click on a marker, then on the \'Join Game\' button.</string>
	<string name="instructions_leave">To leave a game, click on the marker of a joined game, then on the 
	    \'Leave Game\' button.</string>
	<string name="instructions_delete">To delete a game, click on the marker of a joined game when only one 
	    attendee remains, then on the \'Delete Game\' button.</string>
    <string name="developer_info">Pocket Pickup was developed in 2014 by Sergey Naumets, Jacob Gile, Patrick Larson, 
        Isaiah Mathieu, Viktor Farkas and Kane Swanson</string>
    <string name="contact_info">We can be reached at cse-403-team-poseidon@googlegroups.com</string>
    <string name="bug_header">Report Bug</string>
    <string name="instructions_bug">To report a bug, go to https://github.com/isaiahmathieu/pocketpickup/issues and click 
        on the \'New Issue\' button. A github account is required for this.</string>
    <string name="contact_header">Contact Us</string>

</resources>
