<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_scrollable_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:background="@color/gray_theme">
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/instructions_header"
	        android:textStyle="bold"
        	android:layout_gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/instructions_create"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/instructions_find"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/instructions_join"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/instructions_leave"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/instructions_delete"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <View android:background="#000000" 
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	    	android:layout_marginTop="5dp" />
	    
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bug_header"
	        android:textStyle="bold"
        	android:layout_gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/instructions_bug"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <View android:background="#000000" 
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	    	android:layout_marginTop="5dp" />
	    
	    <TextView
	        android:id="@+id/textView9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/contact_header"
	        android:textStyle="bold"
        	android:layout_gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TextView
	        android:id="@+id/textView10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/developer_info"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/textView11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/contact_info"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	</LinearLayout>
</ScrollView>