<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    tools:context="com.uwcse403.pocketpickup.CreateGameActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/create_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_select_date"
        android:onClick="showDatePickerDialog" />

    <Button
        android:id="@+id/create_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_select_time"
        android:onClick="showTimePickerDialog" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game" />
    
</LinearLayout>
