<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    tools:context=".FindGameActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/fg_location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress" 
		android:cursorVisible="false"
		android:focusable="false"
        android:focusableInTouchMode="false"
		android:ems="12"
		android:onClick="setLocation"
		android:gravity="center_horizontal" >
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_range_from"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/start_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showTimePickerDialog"
        android:text="@string/select_time" />

    <Button
        android:id="@+id/start_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="@string/select_date" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_range_to"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/end_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showTimePickerDialog"
        android:text="@string/select_time" />

    <Button
        android:id="@+id/end_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="@string/select_date" />

    <Spinner
        android:id="@+id/radius_spinner"
        android:layout_width="126dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/search_pref_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showSportsPreferencesDialog"
        android:text="@string/change_pref" />
    
    <Button
        android:id="@+id/search_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resetSearchForms"
        android:text="@string/reset" />

    <Button
        android:id="@+id/find_game_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitSearch"
        android:text="@string/find_game" />

</LinearLayout>